--- a/presentation_bib.bib
+++ b/presentation_bib.bib
@@ -7,12 +7,33 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-@incollection{lofar_book_ref,
-	Author = {N. N. de Moura; J. M. de Seixas; Ricardo Ramos},
-	Booktitle = {Sonar Systems},
-	Date-Added = {2016-02-03 14:48:38 +0000},
-	Date-Modified = {2016-02-03 14:50:59 +0000},
-	Editor = {Nikolai Kolev},
-	Publisher = {InTech},
-	Title = {Passive Sonar Signal Detection and Classification Based on Independent Component Analysis},
-	Year = {2011}}
+@article{gu2022pointer,
+  author       = {Gu, Shenshen and Zhuang, Yuxi},
+  title        = {Method for solving constrained 0-1 quadratic programming problems based on pointer network and reinforcement learning},
+  journal      = {Neural Computing and Applications},
+  year         = {2022},
+  volume       = {35},
+  doi          = {10.1007/s00521-022-07604-8}
+}
+
+@article{bahdanau2014neural,
+  author    = {Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+  title     = {Neural Machine Translation by Jointly Learning to Align and Translate},
+  journal   = {arXiv preprint arXiv:1409.0473},
+  year      = {2014}
+}
+
+@inproceedings{luong2015effective,
+  author    = {Luong, Minh-Thang and Pham, Hieu and Manning, Christopher D.},
+  title     = {Effective Approaches to Attention-based Neural Machine Translation},
+  booktitle = {Proceedings of the 2015 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  year      = {2015},
+  pages     = {1412--1421}
+}
+@inproceedings{vaswani2017attention,
+  author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Lukasz and Polosukhin, Illia},
+  title     = {Attention Is All You Need},
+  booktitle = {Advances in Neural Information Processing Systems},
+  year      = {2017},
+  volume    = {30}
+}
