AJuste em nota da attention multiplicativa

--- a/beamerpolito.tex
+++ b/beamerpolito.tex
@@ -179,7 +179,7 @@ e_{ij} &= s_j^\top h_i && \text{(dot)}
   \item \textbf{Dot:} mais simples e rápido (nenhum parâmetro extra).
 \end{itemize}
 
-\textbf{Nota:} Luong mostra que todas podem ser reinterpretadas em termos modernos como $Q=s_j$, $K=h_i$, $V=h_i$.
+\textbf{Nota:} Podemos reinterpretar em termos modernos como $Q=s_j$, $K=h_i$, $V=h_i$.
 \end{frame}
 
 \begin{frame}{Global vs Local Attention \cite{luong2015effective}}
