--- a/beamerpolito.tex
+++ b/beamerpolito.tex
@@ -61,12 +61,12 @@
 		\begin{center}
 			\textbf{LSTM}
 		\end{center}
-
+		\vspace{-5mm}
 		\begin{figure}[h]
 			\centering
-			\includegraphics[width=0.33\textwidth]{assets/colah-LSTM-layer.png}
+			\includegraphics[width=0.5\textwidth]{assets/LSTM_Gates.png}
 		\end{figure}
-
+		\vspace{-2mm}
 		\tiny
 		\[
 		\begin{alignedat}{2}
@@ -82,17 +82,17 @@
 		\begin{center}
 			\textbf{GRU}
 		\end{center}
-
+		\vspace{-5mm}
 		\begin{figure}[h]
 			\centering
-			\includegraphics[width=0.33\textwidth]{assets/colah-GRU-layer.png}
+			\includegraphics[width=0.5\textwidth]{assets/colah-GRU-layer.png}
 		\end{figure}
-
+		\vspace{-2mm}
 		\tiny\[
 			\begin{aligned}
-				z_t         & = \sigma(W_z \cdot \left[h_{t-1}, x_t \right])        \\
-				r_t         & = \sigma(W_r \cdot \left[h_{t-1}, x_t \right])        \\
-				\tilde{h}_t & = \tanh(W \cdot \left[r_t \odot h_{t-1}, x_t \right]) \\
+				z_t         & = \sigma(W_z \cdot [h_{t-1}, x_t ])               \\
+				r_t         & = \sigma(W_r \cdot [h_{t-1}, x_t ])               \\
+				\tilde{h}_t & = \tanh(W \cdot [r_t \odot h_{t-1}, x_t ])        \\
 				h_t         & = (1 - z_t) \odot h_{t-1} + z_t \odot \tilde{h}_t
 			\end{aligned}
 		\]
