--- a/presentation_bib.bib
+++ b/presentation_bib.bib
@@ -37,3 +37,15 @@
   year      = {2017},
   volume    = {30}
 }
+@article{kaplan2020scaling,
+  author    = {Kaplan, Jared and McCandlish, Sam and Henighan, Tom and Brown, Tom B. and Chess, Benjamin and Child, Rewon and Gray, Scott and Radford, Alec and Wu, Jeffrey and Amodei, Dario},
+  title     = {Scaling Laws for Neural Language Models},
+  journal   = {arXiv preprint arXiv:2001.08361},
+  year      = {2020}
+}
+@article{hoffmann2022training,
+  author    = {Hoffmann, Jordan and Borgeaud, Sebastian and Mensch, Arthur and Buchatskaya, Elena and Cai, Trevor and Rutherford, Eliza and Casas, Diego de Las and Hendricks, Lisa Anne and Welbl, Johannes and Clark, Aidan and Hennigan, Tom and Noland, Jacob and Millican, Katie and Driessche, George van den and Damoc, Bogdan and Guy, Aurelia and Osindero, Simon and Simonyan, Karen and Elsen, Erich and Rae, Jack W. and Vinyals, Oriol and Sifre, Laurent},
+  title     = {Training Compute-Optimal Large Language Models},
+  journal   = {arXiv preprint arXiv:2203.15556},
+  year      = {2022}
+}
