Figura Seq2Seq e melhoria no slide LSTM

--- a/beamerpolito.tex
+++ b/beamerpolito.tex
@@ -58,6 +58,7 @@
 \begin{frame}{Tipos de camadas RNN}
 	\begin{columns}[t]
 		\column{0.5\textwidth}
+		\vspace{-5mm}
 		\begin{center}
 			\textbf{LSTM}
 		\end{center}
@@ -79,6 +80,7 @@
 		\end{alignedat}
 		\]
 		\column{0.5\textwidth}
+		\vspace{-5mm}
 		\begin{center}
 			\textbf{GRU}
 		\end{center}
@@ -100,12 +102,11 @@
 	\end{columns}
 \end{frame}
 
-% 1) LSTM baseline: encoder-decoder e gargalo
-\begin{frame}{LSTM como baseline para NMT}
-	\begin{itemize}
-		\item Encoder LSTM lê $(x_1,\dots,x_n)$ e produz estados $h_t$; o contexto é o último estado $c=h_n$.
-		\item Decoder LSTM gera $(y_1,\dots,y_m)$ condicionado a $c$.
-	\end{itemize}
+\begin{frame}{Arquitetura Seq2Seq para Tradução}
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.7\textwidth]{assets/Seq2Seq_NMT.png}
+	\end{figure}
 	\begin{itemize}
 		\item \textbf{Gargalo}: toda a informação comprimida em $c=h_n$.
 		\begin{itemize}
